# klanker-voice

./: .gitignore  .sops.yaml  AGENTS.md  LICENSE  NOTICE.md  README.md
apps/voice/: .dockerignore  .gitignore  Dockerfile  Makefile  bot.py  console.py  pipeline.toml  pyproject.toml  server.py
apps/voice/asterisk/: .env.example  .gitignore  Dockerfile  README.md  ari.conf  docker-compose.yml  entrypoint.sh  extensions.conf  http.conf  pjsip.conf  render_configs.py  rtp.conf
apps/voice/client/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/voice/configs/: arm-a.toml  arm-b.toml  arm-c.toml  telephony.toml  voice2.toml
apps/voice/knowledge/: manifest.yaml
apps/voice/prompts/: concierge.md
apps/voice/scenarios/: bargein_early.yaml  bargein_mid.yaml  bargein_monologue.yaml  greeting.yaml  kph_cache_verify.yaml  kph_crude_humor_guard.yaml  kph_knowledge_defconrun.yaml  kph_knowledge_km.yaml  kph_knowledge_meshtk.yaml  kph_retrieval_depth.yaml  kph_retrieval_km.yaml  kph_router_accuracy.yaml  kph_tour_mode.yaml  kph_unknowns.yaml  memory.yaml
apps/voice/scripts/: audition.py  bootstrap_env.sh  refresh_knowledge.py  render_ambience.py  render_greetings.py  render_pickup_cue.py  say.py
apps/voice/tests/: conftest.py  test_asterisk_configs.py  test_auth.py  test_call_runtime.py  test_config.py  test_controller_pickup_cue.py  test_duplex.py  test_duplex_config.py  test_factories.py  test_greenhouse_hidden.py  test_greet_first_config.py  test_greeting_voice_drift.py  test_knowledge_pacing.py  test_knowledge_pack.py  test_knowledge_refresh.py  test_knowledge_retrieval.py  test_knowledge_router.py  test_ledger.py  test_ledger_schema.py  test_observers.py  test_pickup_cue_player.py  test_pickup_cue_voice_drift.py  test_pronunciation_filter.py  test_quota.py  test_regreet_suppression.py  test_report.py  test_rtvi.py  test_server.py  test_server_static.py  test_session.py  test_slot_leak.py  test_smoke.py  (+15 more)
(+831 files in other folders)
