[project]
name = "klanker-voice"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[anthropic,deepgram,runner,soundfile,webrtc]~=1.5.0",
    "pyjwt[crypto]~=2.13.0",
    "boto3>=1.42",
    "aiohttp>=3.14,<4",  # ARI REST + events-WebSocket client (D-06) -- already a transitive pin via pipecat-ai
]

[dependency-groups]
dev = [
    "pipecat-ai[evals,local]~=1.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klanker_voice"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
